# Electron-Tracking

./: .gitignore  Ford1991.ipynb  LICENSE  README.md
examples/: README.md
examples/Boris/: CMakeLists.txt  README.md  SolverTest.ipynb  boris.cc  commandsTest.mac  list.txt  run.mac
examples/Boris/include/: BIActionInitialization.hh  BIDetectorConstruction.hh  BIEquationOfMotion.hh  BIEventAction.hh  BIFieldMessenger.hh  BIGasHit.hh  BIGasSD.hh  BIMagneticFieldSetup.hh  BIPrimaryGeneratorAction.hh  BIRunAction.hh  BIWatchHit.hh  BIWatchSD.hh  BorisStepper.hh  BorisStepperRadiation.hh  EGDetectorConstruction.hh  EGElectricFieldSetup.hh  EGEventAction.hh  EGFieldMessenger.hh  EGWatchHit.hh  EGWatchSD.hh
examples/Boris/src/: BIActionInitialization.cc  BIDetectorConstruction.cc  BIEquationOfMotion.cc  BIEventAction.cc  BIFieldMessenger.cc  BIGasHit.cc  BIGasSD.cc  BIMagneticFieldSetup.cc  BIPrimaryGeneratorAction.cc  BIRunAction.cc  BIWatchHit.cc  BIWatchSD.cc  BorisStepper.cc  BorisStepperRadiation.cc  EGActionInitialization.cc  EGDetectorConstruction.cc  EGElectricFieldSetup.cc  EGEventAction.cc  EGFieldMessenger.cc  EGGasSD.cc  EGPrimaryGeneratorAction.cc  EGRunAction.cc  EGWatchHit.cc  EGWatchSD.cc
examples/Cd109source/: CMakeLists.txt  README.md  allCommands.mac  cd109.cc  run.mac
examples/Cd109source/analyse/: analysead.py  analysecvs.py  analysegau.py
examples/Cd109source/include/: CDActionInitialization.hh  CDDetectorConstruction.hh  CDEventAction.hh  CDGasHit.hh  CDGasSD.hh  CDPrimaryGeneratorAction.hh  CDRunAction.hh
examples/Cd109source/src/: CDActionInitialization.cc  CDDetectorConstruction.cc  CDEventAction.cc  CDGasHit.cc  CDGasSD.cc  CDPrimaryGeneratorAction.cc  CDRunAction.cc
examples/CustomMagneticFields/: CMakeLists.txt  boris.cc  run.mac
examples/CustomMagneticFields/include/: BorisStepper.hh  BorisStepperRadiation.hh  MFActionInitialization.hh  MFDetectorConstruction.hh  MFEquationOfMotion.hh  MFEventAction.hh  MFFieldMessenger.hh  MFGasHit.hh  MFGasSD.hh  MFMagneticFieldSetup.hh  MFMagneticTrap.hh  MFPrimaryGeneratorAction.hh  MFRunAction.hh  MFWatchHit.hh  MFWatchSD.hh
examples/CustomMagneticFields/src/: BorisStepperRadiation.cc  MFActionInitialization.cc  MFDetectorConstruction.cc  MFEquationOfMotion.cc  MFEventAction.cc  MFFieldMessenger.cc  MFGasHit.cc  MFGasSD.cc  MFMagneticFieldSetup.cc  MFMagneticTrap.cc  MFPrimaryGeneratorAction.cc  MFRunAction.cc  MFWatchHit.cc  MFWatchSD.cc
examples/ElectronGun/: CMakeLists.txt  README.md  analyseRootOutput.C  analyseRootOutput.py  commandsTest.mac  egun.cc
examples/ElectronGun/include/: EGActionInitialization.hh  EGDetectorConstruction.hh  EGGasHit.hh  EGGasSD.hh  EGPrimaryGeneratorAction.hh  EGRunAction.hh  QTNMPhysicsList.hh  SEPrimaryGeneratorAction.hh
examples/ElectronGun/src/: EGActionInitialization.cc  EGDetectorConstruction.cc  EGEventAction.cc  EGGasHit.cc  EGGasSD.cc  EGPrimaryGeneratorAction.cc  EGRunAction.cc  SEGasSD.cc
examples/ElectronGun/test/: CMakeLists.txt  test0.mac
examples/PESource/: CMakeLists.txt  README.md  convert.py  pesource.cc  run.mac
examples/PESource/include/: PEActionInitialization.hh  PEDetectorConstruction.hh  PEEventAction.hh  PEGasHit.hh  PEGasSD.hh  PEPrimaryGeneratorAction.hh  PERunAction.hh
examples/PESource/src/: PEActionInitialization.cc  PEDetectorConstruction.cc  PEEventAction.cc  PEGasHit.cc  PEGasSD.cc  PEPrimaryGeneratorAction.cc  PERunAction.cc
examples/PhysicsValidationTest/: CMakeLists.txt  README.md  TestEm13.cc  run.mac
examples/PhysicsValidationTest/include/: QTeCoulombScatteringModel.hh
examples/PhysicsValidationTest/src/: DetectorConstruction.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  QTNMPhysicsList.cc  QTeCoulombScatteringModel.cc  SteppingAction.cc
examples/ScatteringExample/: CMakeLists.txt  EMoption3.mac  README.md  analyseRootOutput.C  analyseRootOutput.py  commandsTest.mac  scattering.cc
examples/ScatteringExample/include/: G4patcheDPWACoulombScatteringModel.hh  SEActionInitialization.hh  SEDetectorConstruction.hh  SEEventAction.hh  SEGasHit.hh  SEGasSD.hh  SEPSBoundaryTime.hh  SEPSBoundaryTrackID.hh  SEPSEnergyDeposit.hh  SEPSKinEnergy.hh  SEPSKinEnergy1.hh  SEPSKinEnergy2.hh  SEPSParentID.hh  SEPSTime.hh  SEPSTrackID.hh  SERunAction.hh  SEWatchHit.hh  SEWatchSD.hh
examples/ScatteringExample/src/: G4patcheDPWACoulombScatteringModel.cc  QTNMPhysicsList.cc  SEActionInitialization.cc  SEDetectorConstruction.cc  SEEventAction.cc  SEGasHit.cc  SEPSBoundaryTime.cc  SEPSBoundaryTrackID.cc  SEPSEnergyDeposit.cc  SEPSKinEnergy.cc  SEPSKinEnergy1.cc  SEPSKinEnergy2.cc  SEPSParentID.cc  SEPSTime.cc  SEPSTrackID.cc  SEPrimaryGeneratorAction.cc  SERunAction.cc  SEWatchHit.cc  SEWatchSD.cc
examples/ScatteringExample/test/: CMakeLists.txt
python/: Current_Loop.ipynb  ElectronRadiation.ipynb  Electron_Trace_Convergence.ipynb  Ford1991.ipynb  Ford1991_3D.ipynb  Magnetic_Bottle.ipynb  Magnetic_Trap.ipynb  Non_Uniform_Field.ipynb  QTNM_Meeting_240621.ipynb  README.md  Threading_Demo.ipynb  Trapping_Fraction.ipynb  boris_solver.py  config.py  ford1991.py  lorentz.py  lorentz_relativistic.py  qtnm_base.py  qtnm_bathtub.cpp  qtnm_fields.py  trace.py  utils.py
python/cpp/: CMakeLists.txt
python/cpp/include/: qtnm_bathtub.h
python/cpp/src/: qtnm_bathtub.cpp
